--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -19,8 +19,6 @@ android {
             res.srcDirs = ['res']
             assets.srcDirs = ['assets']
         }
-
-        instrumentTest.setRoot('tests')
     }
 
     lintOptions {
@@ -33,7 +31,7 @@ repositories {
 }
 
 dependencies {
-    compile project(':library')
+    implementation project(':library')
 //    compile 'jp.co.cyberagent.android.gpuimage:gpuimage-library:+@aar'
-    compile 'com.android.support:support-v4:23.1.1'
+    implementation 'com.android.support:support-v4:27.1.1'
 }
